# mynovel

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  args.hpp  base.cpp  ccnvl_constructor.py  cmake_install.cmake  display.py  dumper  event.hpp  event_types.hpp  font.hpp  gameapp.hpp  gamemixer.hpp  lcnovel  loader.hpp  lua.hpp  main  main.cpp  main.py  main3.lua  novel_dumper.cpp  pool.hpp  scene.hpp  scene.py  settings.cpp  sprite.hpp  test.ccnvl  test2.ccnvl  textbox.cpp  textbox.hpp  tools.py  utils.hpp  vars.hpp
cmake/: build-windows.sh  mingw-toolchain.cmake
episodes/: 1.lua  2.lua  thinks.lua
lua_scripts/: useful_functions.lua
project1/: script.txt
web_generator/: ccnvl_constructor.py  ccnvl_description.md  commands.js  generator.html  style.css
